Delete the semaphore used to sync timer callbacks when shutting down the appshell.  This should prevent the timer thread from hanging on exit. Bug #99564 sr=alecf